--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="color10">#e0af1f</color>
     <color name="color11">#DCDCDC</color>
     <color name="color12">#2F4F4F</color>
+    <color name="color13">#DCDCDC</color>
 </resources>
