--- a/app/src/main/res/layout/sign_up_screen.xml
+++ b/app/src/main/res/layout/sign_up_screen.xml
@@ -4,169 +4,180 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/signUpScreen"
     android:layout_width="match_parent"
-    android:background="@color/black"
+    android:background="@color/color13"
     android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="426dp"
-        android:layout_height="170dp"
-        app:srcCompat="@drawable/logo"
-        tools:layout_editor_absoluteX="-31dp"
-        tools:layout_editor_absoluteY="-25dp" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="171dp"
-        android:layout_height="71dp"
-        android:layout_marginTop="120dp"
-        android:fontFamily="cursive"
-        android:padding="10dp"
-        android:text="@string/sign_up_inscription"
-        android:textColor="@color/color10"
-        android:textSize="36dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.583"
+        android:layout_width="289dp"
+        android:layout_height="122dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/tt" />
+
+    <com.google.android.material.textfield.TextInputLayout
+
+        android:id="@+id/case1"
+        android:layout_width="352dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="20dp"
+        android:textColorHint="@color/black"
+        app:counterTextColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextEmail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="E-mail"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:textSize="20dp" />
+    </com.google.android.material.textfield.TextInputLayout>" />
+
+    <com.google.android.material.textfield.TextInputLayout
+
+        android:id="@+id/case2"
+        android:layout_width="352dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="20dp"
+        android:textColorHint="@color/black"
+        app:counterTextColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/case1"
+        android:backgroundTint="@color/black"
+
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextNom"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Nom"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:textSize="20dp" />
+    </com.google.android.material.textfield.TextInputLayout>" />
+
+    <com.google.android.material.textfield.TextInputLayout
+
+        android:id="@+id/case3"
+        android:layout_width="352dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="20dp"
+        android:textColorHint="@color/black"
+        app:counterTextColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/case2">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextPrenom"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Prenom"
+            android:inputType="text"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:textSize="20dp" />
+    </com.google.android.material.textfield.TextInputLayout>" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/case4"
+        android:layout_width="352dp"
+        android:layout_height="66dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="24dp"
+        android:textColorHint="@color/black"
+        app:counterTextColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/case3"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/black">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextPassword"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Entrer votre mot de passe"
+            android:inputType="textPassword"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:textSize="20dp" />
+
+    </com.google.android.material.textfield.TextInputLayout>" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/case5"
+        android:layout_width="352dp"
+        android:layout_height="66dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="24dp"
+        android:textColorHint="@color/black"
+        app:counterTextColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/case4"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/black">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editTextConfirmPassword"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Confirmation mot passe"
+            android:inputType="textPassword"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:textSize="20dp" />
+
+    </com.google.android.material.textfield.TextInputLayout><![CDATA[" />
+
+
+
+
+
+    ]]>
 
     <TextView
-        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="185dp"
-        android:text="@string/sign_up_email"
-        android:textColor="@color/white"
-        android:textSize="15dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextEmail"
-        app:layout_constraintEnd_toStartOf="@+id/editTextEmail"
-        app:layout_constraintTop_toTopOf="@+id/editTextEmail"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editTextEmail"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="189dp"
-        android:text="@string/sign_up_nom"
-        android:textColor="@color/white"
-        android:textSize="15dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextNom"
-        app:layout_constraintEnd_toStartOf="@+id/editTextNom"
-        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editTextNom"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="167dp"
-        android:text="@string/sign_up_prenom"
-        android:textColor="@color/white"
-        android:textSize="15dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextPrenom"
-        app:layout_constraintEnd_toStartOf="@+id/editTextPrenom"
-        app:layout_constraintTop_toTopOf="@+id/editTextPrenom"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editTextPrenom"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNom" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="128dp"
-        android:text="@string/sign_up_password"
-        android:textColor="@color/white"
-        android:textSize="15dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
-        app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
-        app:layout_constraintTop_toTopOf="@+id/editTextPassword"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPrenom" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="22dp"
-        android:text="@string/sign_up_confirm_password"
-        android:textColor="@color/white"
-        android:textSize="15dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextConfirmPassword"
-        app:layout_constraintEnd_toStartOf="@+id/editTextConfirmPassword"
-        app:layout_constraintTop_toTopOf="@+id/editTextConfirmPassword"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editTextConfirmPassword"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
-
-    android:textSize="25dp"
-    android:textColor="@color/white"
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="150dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/sign_up_user_type"
-        android:textColor="@color/white"
-        android:textSize="15dp"
+
+        android:textColor="@color/black"
+        android:textSize="25dp"
+
         app:layout_constraintBottom_toBottomOf="@+id/userTypeSpinner"
         app:layout_constraintEnd_toStartOf="@+id/userTypeSpinner"
         app:layout_constraintTop_toTopOf="@+id/userTypeSpinner"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Spinner
         android:id="@+id/userTypeSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_width="50dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="12dp"
         android:descendantFocusability="blocksDescendants"
-        android:drawingCacheQuality="auto"
+        android:outlineAmbientShadowColor="@color/black"
+        android:spinnerMode="dropdown"
+        android:backgroundTint="@color/black"
+        android:pointerIcon="text"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.716"
+        app:layout_constraintHorizontal_bias="0.584"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/case5" />
 
     <Button
         android:id="@+id/buttonSignUpScreen"
@@ -174,12 +185,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:text="@string/sign_up_inscription"
+        android:textColor="@color/color10"
         app:layout_constraintEnd_toEndOf="parent"
         android:fontFamily="cursive"
         android:textSize="20dp"
         android:background="@color/color12"
 
-        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userTypeSpinner" />
 </androidx.constraintlayout.widget.ConstraintLayout>
