ajout sportif update firestore

--- a/app/src/main/res/layout/club_sportif_profil.xml
+++ b/app/src/main/res/layout/club_sportif_profil.xml
@@ -23,6 +23,7 @@
         android:visibility="gone"
         android:layout_width="300dp"
         android:layout_height="400dp"
+        app:cardElevation="20dp"
         android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -191,6 +192,7 @@
         android:id="@+id/equipeDetail"
         android:layout_width="300dp"
         android:layout_height="400dp"
+        app:cardElevation="20dp"
         android:visibility="visible"
         android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
